# lvgl-drm-app

./: CMakeLists.txt  README.md
inc/: main.h
inc/config/: lv_conf.h
src/: main.c
